overlapping markers partly solved
The Popup windows deleted. The list of events in the currently clicked location  was added instead

--- a/client/src/styles/_eventspage.scss
+++ b/client/src/styles/_eventspage.scss
@@ -15,6 +15,7 @@ main{
             flex-direction: column;
             align-items: center;
             z-index: 100;
+            position: fixed;
             .btn-events{
                 width: 100%;
                 display: flex;
@@ -22,40 +23,31 @@ main{
                 justify-content: space-evenly;
             }
         }
-        .events-ls{
-            width: 100%;
-            margin-top: 8em;
-            height: auto;
-            display: flex;
-            flex-direction: row;
-            overflow-x: scroll;
-            justify-content: center;
-            overflow-y: hidden;
-            position: absolute;
-            top: 4vh;
-            z-index: 100;
-            background-color: rgba(250,250,250, 0.6);
-        }
         .events-map{
             width: 100%;
             height: 85vh;
-            position: fixed;
             bottom: 0;
             left: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
+            .events-ls{
+                position: absolute;
+            }
             .map-geocoder{
-                position: relative;
-                top: 4vh;
+                position: fixed;
+                top: 17vh;
                 border: black;
                 border-width: 0.1em;
                 border-style: solid;
             }
             .map{
                 margin-top: 3em;
-                height: 80vh;
+                height: 75vh;
                 width: 100%;
+                bottom: 0;
+                left: 0;
+                position: fixed;
             }
             .event-popup{
                 z-index: 3000;
@@ -63,4 +55,22 @@ main{
             }
         }
     }
+}
+
+.events-ls{
+    width: 100%;
+    margin-top: 8em;
+    height: auto;
+    display: flex;
+    overflow-y: scroll;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    top: 4vh;
+    z-index: 100;
+    background-color: rgba(250,250,250, 0.6);
+    ::-webkit-scrollbar {
+        width: 0px; 
+        background: transparent; 
+        };
 }
