--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -3,4 +3,8 @@
 *{
     box-sizing: border-box;
 }
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
 
